<resources>
    <string name="app_name">SWdex</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_main">SWdex</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- MainActivity strings -->
    <string name="choice_appmode_title">Seleziona modalit\à</string>
    <string name="choice_appmode_msg">Quest\'app supporta la visualizzazione dei dati tramite lista o griglia. Quale preferisci?</string>
    <string name="choice_appmode_grid">Griglia</string>
    <string name="choice_appmode_list">Lista</string>

    <!-- Detail  -->
    <string name="lbl_sex">Genere:</string>
    <string name="lbl_eyescolor">Colore occhi:</string>
    <string name="lbl_haircolor">Colore capelli:</string>
    <string name="lbl_skincolor">Colore pelle:</string>
    <string name="lbl_birthyear">Nato il:</string>
    <string name="lbl_vehicles">Veicoli:</string>
    <string name="lbl_starships">Navicelle:</string>
    <string name="lbl_mass">Massa:</string>
    <string name="lbl_homeworld">Pianeta:</string>
    <string name="lbl_height">Altezza:</string>
    <string name="lbl_film">Film:</string>
    <string name="lbl_film_year">Rilasciato il:</string>

    <!-- Email -->
    <string name="feedback_email_subject">Feedback SWdex</string>
</resources>